2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Don't process
	  keys if the completion window is hidden. Fixes bug #348696.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.mdp: Updated project files. The order of extended
	  properties won't change anymore.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Dialogs/DeleteConfigDialog.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.NewConfigurationDialog.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CommonAssemblySigningPreferences.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CustomCommandPanelWidget.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.DeleteConfigDialog.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.RenameConfigDialog.cs,
	  gtk-gui/gui.stetic,
	  MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs,
	  MonoDevelop.Projects.Gui.Completion/ListWindow.cs,
	  MonoDevelop.Projects.Gui.Completion/DeclarationViewWindow.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CompileFileProjectOptions.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/OutputOptionsPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineStartupPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/RuntimeOptionsPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/GeneralProjectOptions.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineInformationPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineConfigurationPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineBuildOptions.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineEntryConfigurationsPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CommonAssemblySigningPreferences.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CustomCommandPanel.cs: API
	  cleanup.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 
